@@ -16,7 +16,7 @@ NEWS:
 
 
 NEW: [features/improvments]
-+Launch adds support for OCaml (patch from quode)
++Launch adds support for OCaml (patch from quode) and LaTex
 +Shortcut for maximizing/minimizing the editor pane (patch from Rudi Pettazzi)
 +Add menu entry for Fold All action (patch from Giuseppe "Cowo" Corbelli)
 +Codebrowser adds support for XML/HTML (patch from Rudi Pettazzi)
